--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,13 @@
     <string name="app_name">Assessment-Test---V2-Technologies-LTD</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="done">DONE</string>
+    <string name="next">NEXT</string>
+    <string name="retry">RETRY</string>
+    <string name="cancel">CANCEL</string>
+    <string name="error">Error</string>
+    <string name="thank_you">Thank You!</string>
+    <string name="congo">Congratulations! You have taken the survey successfully. You can access this survey from dashboard.</string>
+    <string name="ok">OK</string>
+    <string name="optional">(optional)</string>
 </resources>
